# pokemon-resort

./: .gitignore  CMakeLists.txt  README.md  pkr
assets/pokesprite/data/: misc.json  pokemon.json  unofficial_sprite_additions.json  unofficial_sprite_additions.md
assets/transfer_select_save/: background.aseprite  pallete.aseprite
config/: app.json  design.json  game_transfer.json  loading_screen.json  title_screen.json  transfer_save.json  transfer_select_save.json
docs/: ARCHITECTURE.md  PKHEX_BRIDGE.md
docs/assets/: pokesprite_subsystem.md
docs/backend/: README.md  api_reference.md  export_flow.md  frontend_integration.md  import_flow.md  storage_model.md  testing_and_seed_data.md
docs/config/: README.md  game_transfer.md  transfer_select_save.md
docs/loading/: README.md
docs/transfer_system/: MIRROR_PROJECTION_ARCHITECTURE.md  README.md  TRANSFER_IDEAS.md
include/core/: App.hpp  Assets.hpp  Audio.hpp  BridgeImportMerge.hpp  ConfigLoader.hpp  Font.hpp  InputBindings.hpp  InputRouter.hpp  Json.hpp  PcSlotSpecies.hpp  PokeSpriteAssets.hpp  PokemonBall.hpp  PokemonOrigin.hpp  SaveBridgeClient.hpp  SaveDataStore.hpp  SaveLibrary.hpp  Types.hpp
include/core/app/: AppPaths.hpp
include/core/assets/: Assets.hpp  PokeSpriteAssets.hpp
include/core/bridge/: BridgeImportMerge.hpp  SaveBridgeClient.hpp
include/core/crypto/: Sha256.hpp
include/core/domain/: PcSlotSpecies.hpp  PokemonOrigin.hpp
include/core/input/: InputRouter.hpp
include/core/save/: SaveLibrary.hpp  SavePaths.hpp  TransferBoxEditsStore.hpp
include/resort/domain/: ExportedPokemon.hpp  Ids.hpp  ImportedPokemon.hpp  MatchMerge.hpp  PkmFormat.hpp  PokemonMergeFieldPolicy.hpp  ResortTypes.hpp
include/resort/integration/: BridgeImportAdapter.hpp  Gen12DvBytes.hpp
include/resort/persistence/: BoxRepository.hpp  HistoryRepository.hpp  Migrations.hpp  MirrorSessionRepository.hpp  PokemonRepository.hpp  SnapshotRepository.hpp  SqliteConnection.hpp
include/resort/services/: BoxViewService.hpp  BridgeImportService.hpp  MirrorProjectionService.hpp  MirrorReturnAnalysis.hpp  MirrorSessionService.hpp  PokemonExportService.hpp  PokemonImportService.hpp  PokemonMatcher.hpp  PokemonMergeService.hpp  PokemonResortService.hpp
include/ui/: BoxViewport.hpp  FocusManager.hpp  LoadingScreen.hpp  ResortLoadingTransitionScreen.hpp  Screen.hpp  ScreenInput.hpp  TitleScreen.hpp  TransferFlowCoordinator.hpp  TransferSaveSelection.hpp  TransferSystemScreen.hpp  TransferTicketSandboxScreen.hpp  TransferTicketScreen.hpp
include/ui/loading/: LoadingScreenBase.hpp  LoadingScreenFactory.hpp  PokeballLoadingScreen.hpp  ResortTransferLoadingConfig.hpp  ResortTransferLoadingRenderer.hpp  ResortTransferLoadingScreen.hpp
include/ui/title_screen/: MainMenuController.hpp  OptionsMenuController.hpp  SectionScreenController.hpp
include/ui/transfer_flow/: TransferFlowController.hpp  TransferSelectionBuilder.hpp
include/ui/transfer_system/: BoxSpaceBoxMoveController.hpp  GameBoxBrowserController.hpp  GameTransferConfig.hpp  ItemActionMenuController.hpp  MultiPokemonMoveController.hpp  PokemonActionMenuController.hpp  PokemonMoveController.hpp  TransferInfoBannerPresenter.hpp  TransferSaveConfig.hpp  TransferSystemFocusGraph.hpp  TransferSystemUiStateController.hpp
include/ui/transfer_ticket/: TransferTicketListController.hpp
src/: main.cpp
src/core/: App.cpp  Assets.cpp  Audio.mm  BridgeImportMerge.cpp  ConfigLoader.cpp  Font.cpp  InputBindings.cpp  InputRouter.cpp  Json.cpp  PokeSpriteAssets.cpp  PokemonBall.cpp  PokemonOrigin.cpp  SaveBridgeClient.cpp  SaveDataStore.cpp  SaveLibrary.cpp  Sha256.cpp  TransferBoxEditsStore.cpp
src/core/app/: AppPaths.cpp
src/core/assets/: Assets.cpp  Font.cpp  PokeSpriteAssets.cpp
src/core/audio/: Audio.mm
src/core/bridge/: BridgeImportMerge.cpp  SaveBridgeClient.cpp
src/core/config/: ConfigLoader.cpp  Json.cpp
src/core/crypto/: Sha256.cpp
src/core/domain/: PokemonBall.cpp  PokemonOrigin.cpp
src/core/input/: InputBindings.cpp  InputRouter.cpp
src/core/save/: SaveDataStore.cpp  SaveLibrary.cpp  TransferBoxEditsStore.cpp
src/resort/domain/: Ids.cpp  PokemonMergeFieldPolicy.cpp
src/resort/integration/: BridgeImportAdapter.cpp  Gen12DvBytes.cpp
src/resort/persistence/: BoxRepository.cpp  HistoryRepository.cpp  Migrations.cpp  MirrorSessionRepository.cpp  PokemonRepository.cpp  SnapshotRepository.cpp  SqliteConnection.cpp
src/resort/services/: BoxViewService.cpp  BridgeImportService.cpp  MirrorProjectionService.cpp  MirrorReturnAnalysis.cpp  MirrorSessionService.cpp  PokemonExportService.cpp  PokemonImportService.cpp  PokemonMatcher.cpp  PokemonMergeService.cpp  PokemonResortService.cpp
src/ui/: BoxViewport.cpp  FocusManager.cpp  LoadingScreen.cpp  TitleScreen.cpp  TransferFlowCoordinator.cpp  TransferSystemScreen.cpp  TransferTicketSandboxScreen.cpp  TransferTicketScreen.cpp
src/ui/loading/: LoadingScreenFactory.cpp  PokeballLoadingScreen.cpp  ResortTransferLoadingConfig.cpp  ResortTransferLoadingRenderer.cpp  ResortTransferLoadingScreen.cpp  ResortTransferLoadingScreenMotion.cpp
src/ui/title_screen/: MainMenuController.cpp  OptionsMenuController.cpp  SectionScreenController.cpp  TitleScreenInternal.hpp  TitleScreenRender.cpp
src/ui/transfer_flow/: TransferFlowController.cpp  TransferSelectionBuilder.cpp
src/ui/transfer_system/: BoxSpaceBoxMoveController.cpp  GameBoxBrowserController.cpp  GameTransferConfig.cpp  ItemActionMenuController.cpp  MultiPokemonMoveController.cpp  PokemonActionMenuController.cpp  PokemonMoveController.cpp  TransferInfoBannerPresenter.cpp  TransferInfoBannerRenderer.cpp  TransferSaveConfig.cpp  TransferSystemFocusGraph.cpp  TransferSystemRenderer.cpp  TransferSystemRendererDropdowns.cpp  TransferSystemRendererHeld.cpp  TransferSystemRendererMain.cpp  TransferSystemRendererMenus.cpp  TransferSystemRendererTopBar.cpp  TransferSystemScreenActionMenuHelpers.cpp  TransferSystemScreenActionMenuPointer.cpp  TransferSystemScreenAdvancePressed.cpp  TransferSystemScreenBackPressed.cpp  (+35 more)
tools/: resort_backend_tool.cpp
(+27 files in other folders)
